--- a/appendix_constants.tex
+++ b/appendix_constants.tex
@@ -2,6 +2,7 @@
 \label{appendix_constants}
 
 \footnotetext[1]{Die Bindungslängen wurden über die Kristallstrukturen aus den Gitterkonstanten berechnet}
+\footnotetext[2]{Die Dichte bei höheren Temperaturen wurde über die Dichte bei Raumtemperatur und den linearen Ausdehnungskoeffizienten berechnet}
 
 \begin{table}[H]
   \centering
@@ -27,7 +28,8 @@
     \hline
     \textbf{Größe}                           & \textbf{Wert}                                  & \textbf{Referenz}               \\
     \hline
-    Dichte $\rho$, fest                      & \SI{19.3}{\gpcc}                               & \cite{haynes_crc_2011} S.4-65   \\
+    Dichte $\rho$, \SI{300}{\kelvin}         & \SI{19.3}{\gpcc}                               & \cite{haynes_crc_2011} S.4-65   \\
+    Dichte $\rho$, \SI{500}{\kelvin}         & \SI{19.13}{\gpcc}                              & berechnet\footnotemark[2]       \\
     Dichte $\rho_m$, flüssig                 & \SI{17.31}{\gpcc}                              & \cite{haynes_crc_2011} S.4-128  \\
     Schmelztemperatur $T_m$                  & \SI{1064.18}{\celsius} (\SI{1337.33}{\kelvin}) & \cite{haynes_crc_2011} S.4-65   \\
     Atomgewicht $u$                          & \SI{196.967}{\gram\per\mole}                   & \cite{haynes_crc_2011} S.4-65   \\
