--- a/masterthesis.tex
+++ b/masterthesis.tex
@@ -34,21 +34,21 @@
 
 \pagenumbering{roman}
 
-\include{abstract}
-\include{contents}
+%% \include{abstract}
+%% \include{contents}
 
 \pagenumbering{arabic}
 
-\cleardoublepage
-\include{intro}
-\cleardoublepage
-\include{theory}
-\cleardoublepage
-\include{models}
+%% \cleardoublepage
+%% \include{intro}
+%% \cleardoublepage
+%% \include{theory}
+%% \cleardoublepage
+%% \include{models}
 \cleardoublepage
 \include{results}
-\cleardoublepage
-\include{summary}
+%% \cleardoublepage
+%% \include{summary}
 
 \cleardoublepage
 \include{appendix}
@@ -56,7 +56,7 @@
 \cleardoublepage
 \include{bibliography}
 
-\include{unischeiss}
+%% \include{unischeiss}
 
 \include{test}
 
