--- a/appendix.tex
+++ b/appendix.tex
@@ -4,6 +4,7 @@
   \input{appendix_datastructures}
   \input{appendix_runtime}
   %% appendix_lammpsrant
+  \input{appendix_gold}
   \input{appendix_multilayer}
   \input{appendix_silicon}
   \input{appendix_alumina}
